8211129: compiler/whitebox/ForceNMethodSweepTest.java fails after JDK-8132849

Reviewed-by: eosterlund, thartmann